# 3R

./: .lintr  1_Home.py  3R.docx  Accueil.py  Notes.md  README.md  config.tex  custom.scss  extensions.txt  glmulti.analysis.modgen.back  glmulti.analysis.mods.back  note.ipynb  notes.txt  pyproject.toml  references.bib  report.aux  report.html  report.qmd  report.tex  slides_smartphones.html  slides_smartphones.ipynb  slides_smartphones.qmd  slides_smartphones_2.html  slides_smartphones_2.qmd  streamlit_app.py  summary_researchpapers.html  summary_researchpapers.md  test.html  test.qmd
.streamlit/: config.toml
Web_Scraping/: new_notebook.ipynb
Web_Scraping/data/: df_clean.csv  df_clean_2.csv  sfa_coefs.parquet  sfa_results.csv  sfa_results_app.parquet  smartphones.json  smartphones_2.json
Web_Scraping/plotly_figures/: figure_loader.py
Web_Scraping/script/: custom_decorators.py  hedonic_regression.py  polars_gazprom.py  scraper_functions.py  selection.r  sfa.r  smartphone_class.py  soupifier.py  test.ipynb
Web_Scraping/script/data/: smartphones.json
modules_app/: data_import.py  queries.py  selectors.py  st_config.py  st_plots.py  st_tables.py
notes/: glmulti.analysis.mods.back  notes.txt
old/: draft.aux  draft.rmd
pages/: 2_Data.py  2_📊_Insights.py  2_📋_Détails.py  3_🆚_Comparateur.py  3_📋_Détails.py  4_〽_Efficacité.py  4_🆚_Comparateur.py  5_📊_Stats.py  5_📋_Détails.py
r_markdowns/: draft.toc
utils/: patch_tex.R
